<resources>
    <string name="app_scrolling_with_snack_behavior" translatable="false">com.tiagobagni.myshoppinglist.view.MoveUpwardBehavior</string>

    <string name="app_name">My Shopping List</string>
    <string name="title_shopping_list">Shopping List</string>
    <string name="title_create_shopping_list">New Shopping List</string>
    <string name="title_stock_items">Stock</string>
    <string name="action_settings">Settings</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_new_item">+ Add new item...</string>
    <string name="hint_item_name">Name</string>
    <string name="hint_item_icon">Icon</string>
    <string name="title_new_stock_item">New Stock Item</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title" translatable="false">@string/app_name</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_add_stock_item">Add Stock Item...</string>
    <string name="error_empty_name">Please, correctly fill the name</string>
    <string name="completed_header">Completed</string>

    <string name="search_title">Search</string>
    <string name="empty_stockItems">No stock items found.</string>
    <string name="empty_shoppingIList">No shopping list items found.</string>
    <string name="action_clear">Clear shopping list</string>
    <string name="shopping_list_item_comment_description">Write any comment or observation about this item...</string>
    <string name="comment_title">Comment about this item</string>
    <string name="how_much_title">How much was it?</string>
    <string name="how_much_description">Enter the price paid for this product to keep track of the spendings</string>
    <string name="total_spent">Total Spent: %1$s</string>
    <string name="action_archive">Archive</string>
    <string name="active_lists_header">Active lists</string>
    <string name="archived_lists_header">Archived lists</string>
    <string name="delete">Delete</string>
    <string name="delete_title">Delete?</string>
    <string name="delete_archived_msg">Are you sure you want to delete this archived list?</string>
    <string name="delete_list_msg">Are you sure you want to delete this list?</string>
    <string name="archive_title">Archive?</string>
    <string name="archive_msg">Are you sure you want to archive the list? This will move all your current items to an archived list</string>
    <string name="delete_items_msg">Are you sure you want to delete these items?</string>
    <string name="avg_price">Average price:</string>
    <string name="cheapest">Cheapest</string>
    <string name="most_expensive">Most expensive</string>
    <string name="history_header">History</string>
    <string name="action_select_all">Select All</string>
    <string name="settings">Settings</string>
    <string name="max_archived_lists_summary">Older archived lists exceeding this maximum are automatically removed. Current: %1$s</string>
    <string name="max_archived_lists_title">Max. Archived Lists</string>
    <string name="do_not_archive_option">0 - Do not archive</string>

    <string name="sp_max_archived_lists" translatable="false">keep_archived_lists</string>

    <string name="archived_list_title" translatable="false">%1$s (%2$s)</string>
    <string name="new_shopping_list_title">New Shopping List</string>
    <string name="new_shopping_list_sub_title">Give your new shopping list a name</string>
    <string name="create_btn">Create!</string>
    <string name="status_list_already_exists">This list name already exists</string>
</resources>
