<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/active_lists_header"
        android:id="@+id/active_lists_menu_item">
        <menu>
            <group android:id="@+id/active_group"
                android:checkableBehavior="single"/>
        </menu>
    </item>

    <group android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_shopping_list"
            android:icon="@drawable/ic_add2"
            android:title="@string/title_create_shopping_list" />
        <item
            android:id="@+id/nav_stock_items"
            android:icon="@drawable/ic_menu_stock"
            android:title="@string/title_stock_items" />
    </group>

    <item android:title="@string/archived_lists_header"
        android:id="@+id/history_menu_item">
        <menu>
            <group android:id="@+id/archived_group"
                android:checkableBehavior="single"/>
        </menu>
    </item>

    <group android:id="@+id/settings_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

</menu>
