<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/shoppingListTitle"
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/form_layout_margin"
        android:layout_marginStart="@dimen/form_layout_margin"
        android:layout_marginTop="@dimen/form_layout_margin_large"
        android:text="@string/new_shopping_list_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shoppingListSubTitle"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/form_layout_margin"
        android:layout_marginStart="@dimen/form_layout_margin"
        android:layout_marginTop="@dimen/form_layout_margin"
        android:text="@string/new_shopping_list_sub_title"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListTitle" />

    <Button
        android:id="@+id/createBtn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/form_layout_margin"
        android:layout_marginStart="@dimen/form_layout_margin"
        android:layout_marginTop="@dimen/form_layout_margin"
        android:enabled="false"
        android:text="@string/create_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListEdit" />

    <EditText
        android:id="@+id/shoppingListEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/form_layout_margin"
        android:layout_marginStart="@dimen/form_layout_margin"
        android:layout_marginTop="@dimen/form_layout_margin"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListSubTitle" />

    <TextView
        android:id="@+id/statusTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/status_list_already_exists"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>